# oops_in_python

./: Python_Design_Pattern_Principles.py  README.md  main.py
01.Class-attributes/: pyproject.toml
01.Class-attributes/01/class_attributes/: attributes_1.py  class_instance_attributes.py
02.Method/: method.py
design_pattern/: strategy_pattern.py
design_pattern/observer/: fitness_data.py  live_activity_display.py  main.py  observer_interface.py  subject_interface.py
problem-lld/payment-processing-system/: main.py
