[project]
name = "01-class-attributes"
version = "0.1.0"
description = ""
authors = [
    {name = "sumanengg.sg",email = "sumanengg.sg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "01"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
